{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "cf71bc70-090d-44b3-979f-a3009a6db0a6",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ebe50a2e-ff97-48e6-a99d-48a89970bae5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AxisX",
                    "type": "Value",
                    "id": "455ba09a-f785-4cc5-bf64-8bf856d3e461",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AxisY",
                    "type": "Button",
                    "id": "7d8cadd8-a49e-4171-9ef8-bd4b1695c7c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2af2927d-2bbf-458b-9532-450c5403e918",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WS",
                    "id": "6c6b4d1f-546b-41ea-bdb7-36a28d55dab5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3ed81347-1a1c-44e4-80fc-588035f2a326",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3cd5aa04-7320-4f2f-b8f8-4442ba93df13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "UD Arrows",
                    "id": "e8da7ad6-b31a-4eb4-b7a5-b0e7f17c433e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c02d2852-b2d1-4f06-a54a-c357acfa0e8f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e84d43b9-98af-4161-8cde-7afa64a705a1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "5b2f93e7-930a-4eba-9720-fb7fd78fe335",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "95ad779b-7062-47cd-b250-df95fc58377e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ac83517d-08fa-427c-90d1-d45edc7a8e7f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LR Arrows",
                    "id": "b6186513-3a6d-469e-a528-503728ddced4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0b0ffa5e-7c7c-46a2-a018-1c69f6406680",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "54077151-f90b-4825-a8d6-1ad97882d04a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}